--- a/FIPLY/App/app/src/main/res/layout/fragment_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_main.xml
@@ -16,17 +16,6 @@
         />
 
     <Button
-        android:id="@+id/btStartUe"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:background="@color/darkMenuButtons"
-        android:text="@string/startUe"
-        android:textSize="25dp"
-        />
-
-    <Button
         android:id="@+id/btStartTr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,6 +38,28 @@
         />
 
     <Button
+        android:id="@+id/btStartTrainView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:background="@color/darkMenuButtons"
+        android:text="@string/startTrainView"
+        android:textSize="25dp"
+        />
+
+    <Button
+        android:id="@+id/btStartUe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:background="@color/darkMenuButtons"
+        android:text="@string/startUe"
+        android:textSize="25dp"
+        />
+
+    <Button
         android:id="@+id/btStartPlaylist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -60,13 +71,13 @@
         />
 
     <Button
-        android:id="@+id/btStartTrainView"
+        android:id="@+id/btStartStatistic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         android:background="@color/darkMenuButtons"
-        android:text="@string/startTrainView"
+        android:text="@string/startStatistic"
         android:textSize="25dp"
         />
 
